2019-04-10  Charlie Zender  <zender@uci.edu>

	* Add stubs for ncap2 to use nco_fl_dmm_mk() to circumvent required input file argument

	* NCO 4.8.0-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha08: Whiskey Ginger Beer';git push
	git tag -a 4.8.0-alpha08 -m 'ncremap --vrt_fl pure pressure, CMIP ta & zg, mnt ncr/dcr';git push --tags

	* nco_ntp_vrt() Fix and validate increasing and decreasing input/output vertical grids

2019-04-08  Charlie Zender  <zender@uci.edu>

	* ncremap: Correct bug introduced in 4.8.0-alpha08 that only regrids when dbg_lvl > 1 (DOH!) noticed by Min Xu

2019-04-04  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() allow monotonically decreasing input or output grids

2019-04-03  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() Plumb for pure pressure grids

	* nco_ntp_vrt() Treat variables named "ta" and "zg" with temperature and geopotential height extrapolation rules, respectively

2019-04-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha07: Bond-o';git push
	git tag -a 4.8.0-alpha07 -m 'ncremap --vrt_fl features and optimizations';git push --tags

2019-03-31  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() allocate and define only needed pressure grids,	reduce memory consumption by 2x if ilev not needed

	* nco_ntp_vrt() extrapolate geopotential height using hypsometric equation on LHS and RHS, fixes Z3

	* nco_ntp_vrt() implement poor subterranean geopotential extrapolation for variables named Z3

	* nco_ntp_vrt() implement and validate subterranean temperature extrapolation for variables named T

	* nco_ntp_vrt() re-factor extrapolation flags into structures with an enumerated constant for each type

	* nco_ntp_vrt() isolate log(pressure) assumption

	* nco_ntp_vrt() allow possibility that PS has time dimension > 1

2019-03-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha06 release procedure: